tests/fixtures/positive/code-style/ProhibitSuppressWarnings_StringWithSuppressText.cls
// Valid: String containing @SuppressWarnings (not an annotation)
public class Example3 {
    public void method() {
        String text = '@SuppressWarnings is not allowed';
        String another = 'NOPMD should not be used';
    }
}

