tests/fixtures/negative/code-style/ProhibitSuppressWarnings_SuppressAll.cls
// Violation: @SuppressWarnings annotation suppressing all PMD warnings
@SuppressWarnings('PMD')
public class Example1 {
    public void method() {
        int unused = 42;
    }
}

